# rpicam-opencv

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  camcv  camcv.c  camcv_vid1.cpp  cmake_install.cmake  displayimage  imageset.csv  opencv-face  opencv-face.cpp
