cmake_minimum_required(VERSION 2.8)
project( camcv_vid1 )
SET(COMPILE_DEFINITIONS -Werror)
SET(CMAKE_BUILD_TYPE Debug)
find_package( OpenCV REQUIRED )
include_directories(/opt/vc/include/interface/vcos)
include_directories(/opt/vc/include)
include_directories(/opt/vc/include/interface/vcos/pthreads)
include_directories(/opt/vc/include/interface/vmcs_host/linux)
add_executable(camcv_vid1 RaspiTexUtil.c RaspiTex.c RaspiCamControl.c RaspiCLI.c RaspiPreview.c camcv_vid1.cpp gl_scenes/square.c gl_scenes/mirror.c gl_scenes/teapot.c gl_scenes/sobel.c gl_scenes/yuv.c tga.c gl_scenes/models.c)
target_link_libraries(camcv_vid1 /opt/vc/lib/libmmal_core.so /opt/vc/lib/libmmal_util.so /opt/vc/lib/libmmal_vc_client.so /opt/vc/lib/libvcos.so /opt/vc/lib/libbcm_host.so /lib/arm-linux-gnueabihf/libpthread.so.0 /opt/vc/lib/libGLESv2.so /opt/vc/lib/libEGL.so /lib/arm-linux-gnueabihf/libm.so.6 ${OpenCV_LIBS} /home/pi/libfacerec/libopencv_facerec.a)
